# duckdb-extension-alias

./: .gitignore  CMakeLists.txt  Makefile  README.md
.github/workflows/: MainDistributionPipeline.yml
duckdb_capi/: duckdb.h
src/: extension_alias.c
test/sql/: extension_alias.test
